# check_your_heuristic

./: .gitignore  Base.py  Dockerfile  Heuristic.py  LICENSE  README.md  app.py  config.yaml  docker-compose.yml  main.py  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  test_muserc.py  test_rucos.py  utils.py  wordincontext_dataset_check.py
check_your_heuristic/: Base.py  configs.py  main.py  utils.py
check_your_heuristic/dataset/: Dataset.py  MultiRCDataset.py  ReCoRDDataset.py  __init__.py
check_your_heuristic/heuristics/: BasicHeuristics.py  Heuristic.py  ReCoRDHeuristics.py  WordInContextHeuristics.py  __init__.py
core/: main.py  wordincontext_dataset_check.py
core/src/: Base.py
core/src/dataset/: Dataset.py  MultiRCDataset.py  ReCoRDDataset.py
core/tests/: test_BaseSolver.py
heuristics/: BasicHeuristics.py
resources/RUSSE/: val.jsonl
src/: Base.py  Dataset.py  Heuristic.py  utils.py
src/dataset/: BaseDataset.py  Dataset.py  MultiRCDataset.py  ReCoRDDataset.py
src/heuristics/: BasicHeuristics.py  ReCoRDHeuristics.py  WordInContextHeuristics.py
static/: styles.css
static/css/: bootstrap.min.css  styles.css
static/js/: bootstrap.bundle.min.js  jquery.min.js  main.js
templates/: about.html.j2  base.html.j2  contacts.html.j2  error.html.j2  heuristics.html.j2  index.html  index.html.j2  output.html.j2  submission.html.j2  wrong_column.html.j2
tests/: test_BaseSolver.py
web-dev/: app.py
web-dev/static/: styles.css
web-dev/templates/: heuristics.html.j2  index.html
web-dev/uploads/: logger.txt
(+5 files in other folders)
