[metadata]
name = check-your-heuristic
version = 0.1
author = Tatiana Iazykova, Olga Bystrova, Denis Kapelyushnik 
author_email = tania_yazykova@bk.ru
description = Small library which aim is to check your dataset for being solved by simple heuristics. Multilingual! 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tatiana-iazykova/check_your_heuristic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy==1.19.5
    pandas==1.1.5
    scikit-learn==1.0
    pymorphy2==0.9.1
    pyyaml==6.0
    nptyping==1.4.4
    parameterized==0.8.1
    openpyxl==3.0.9
    matplotlib==3.4.3
    seaborn==0.11.2

[options.packages.find]
where = src
